// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayError renders correctly - no props.error 1`] = `
<DisplayErrorstyle__ulError>
  <li>
    Opps, something went wrong.
  </li>
</DisplayErrorstyle__ulError>
`;

exports[`DisplayError renders correctly - props.error.graphQLErrors 1`] = `
<DisplayErrorstyle__ulError>
  <li
    key="error0"
  >
    mock graphQLErrors message
  </li>
</DisplayErrorstyle__ulError>
`;

exports[`DisplayError renders correctly - props.error.message 1`] = `
<DisplayErrorstyle__ulError>
  <li>
    mock error message
  </li>
</DisplayErrorstyle__ulError>
`;
